fix home banner overflow, clean markup and css

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,33 +1,39 @@
 body{font-size:1.2em;}
-.hidden-format-for-browse{color:rgba(0, 0, 0, 0);font-size:1px;line-height: 1px}
+
+/* banner */
+.title-card {
+    background-color: #25242485;
+    background-color: rgba(37, 36, 36, 0.72);
+    color: white !important;
+}
+.featured-link {
+    background:rgba(0,0,0,.5);
+    padding:.5em;
+}
+/* subjects */
 #cloud {
     background: none repeat scroll 0% 0% rgb(64, 82, 79); 
     padding: 4px;
 }
-.tagcloud0{font-size:0.4 em;}
-
-.tagcloud1{font-size:0.5 em;}
-
+.tagcloud0{font-size:0.4em;}
+.tagcloud1{font-size:0.5em;}
 .tagcloud2{font-size:0.8em;}
-
 .tagcloud3{font-size:1.1em;}
-
 .tagcloud4{font-size:1.4em;}
-
 .tagcloud5{font-size:1.6em;}
-
 .tagcloud6{font-size:1.9em;}
-
 .tagcloud7{font-size:2.2em;}
-
 .tagcloud8{font-size:2.5em;}
-
 .tagcloud9{font-size:2.8em;}
-
 .tagcloud10{font-size:3.0em;}
 
-/* browse page audio and video thumbnails */
+/* browse page */
 .media-image{width:75%;}
+.hidden-format-for-browse{
+    color:rgba(0, 0, 0, 0);
+    font-size:1px;
+    line-height: 1px
+}
 
 /* data page */
 .table-font{font-size:18px;}
@@ -43,10 +49,3 @@ body{font-size:1.2em;}
     .previous { left:10px; }
     .next{ right:10px; }
 }
-
-/* banner */
-.title-card {
-    background-color: #25242485;
-    background-color: rgba(37, 36, 36, 0.72);
-    color: white !important;
-margin:0px -22px;}
